# axum-form-fields

./: .gitignore  Cargo.toml  README.md
form_fields/: Cargo.toml
form_fields/examples/: all_inputs.rs  backing.rs  optional.rs  passthrough.rs  selectable.rs  simple.rs  validation.rs
form_fields/src/: from_form.rs  lib.rs  multipart.rs  selectable.rs  urlencoded.rs  validation_value.rs
form_fields/src/elements/: checkbox.rs  date_picker.rs  mod.rs  multiselect.rs  number_field.rs  passthrough.rs  password_field.rs  radio_button.rs  select.rs  text_field.rs
form_fields_macro/: Cargo.toml
form_fields_macro/src/: checkbox.rs  date_picker.rs  lib.rs  multiselect.rs  number_field.rs  passthrough.rs  password_field.rs  radio_button.rs  select.rs  selectable.rs  text_field.rs  to_quote.rs
