[workspace]
resolver = "2"
members = ["form_fields", "form_fields_macro"]

[workspace.package]
version = "0.1.6"
edition = "2024"
license-file = "LICENSE"
keywords = ["web", "html", "form", "axum", "maud"]
description = "Helper crate for working with HTML forms."
repository = "https://github.com/HookedBehemoth/axum-form-fields"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4"
multer = "3.1.0"
form_urlencoded = "=1.2.1"
log = "0.4.27"

axum = { version = "0.8.3", features = ["http1", "tokio", "query"], default-features = false }
maud = { version = "0.27.0", features = ["axum"] }
