[package]
name = "form_fields"
version.workspace = true
edition.workspace = true
license-file.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["urlencoded", "chrono"]
urlencoded = ["form_urlencoded"]
multipart = ["multer"]
chrono = ["dep:chrono"]

[dependencies]
chrono = { workspace = true, optional = true }
maud.workspace = true
axum.workspace = true
multer = { workspace = true, optional = true }
form_urlencoded = { workspace = true, optional = true }
log.workspace = true

[dev-dependencies]
serde.workspace = true
tokio.workspace = true
form_fields_macro = { path = "../form_fields_macro" }
