[package]
name = "form_fields"
version.workspace = true
edition.workspace = true
license-file.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["urlencoded", "chrono", "derive", "multipart"]
urlencoded = ["form_urlencoded"]
multipart = ["multer"]
chrono = ["dep:chrono"]
derive = ["dep:form_fields_macro"]

[dependencies]
form_fields_macro = { version = "0", path = "../form_fields_macro", optional = true }

chrono = { workspace = true, optional = true }
maud.workspace = true
axum.workspace = true
multer = { workspace = true, optional = true }
form_urlencoded = { workspace = true, optional = true }
log.workspace = true

[dev-dependencies]
serde.workspace = true
tokio.workspace = true
