[package]
name = "form_fields_macro"
version.workspace = true
edition.workspace = true
license-file.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.101"
proc-macro2 = "1.0.95"
deluxe = "0.5.0"
chrono.workspace = true
